--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,9 +8,11 @@ authors = ["Ubermensch <uberdeveloper001@gmail.com>"]
 python = "^3.7"
 pendulum = "^2.1.2"
 pydantic = "^1.8.2"
+PyYAML = "^5.4.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
+ptw = "^1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
