--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,10 @@
 name = "omspy"
 version = "0.0.0"
 description = ""
+license = "MIT"
 authors = ["Ubermensch <uberdeveloper001@gmail.com>"]
+readme = "README.md"
+repository = "https://github.com/uberdeveloper/omspy"
 
 [tool.poetry.dependencies]
 python = "^3.7"
@@ -12,7 +15,7 @@ PyYAML = "^5.4.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
-ptw = "^1"
+pytest-watch = "^4.2.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
