--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,9 +13,16 @@ pendulum = "^2.1.2"
 pydantic = "^1.8.2"
 PyYAML = "^5.4.1"
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.test.dependencies]
+coverage = "^6.0.2"
+selenium = "^3.141.0"
 pytest = "^5.2"
 pytest-watch = "^4.2.0"
+
+[tool.poetry.group.brokers.dependencies]
+pyotp = "^2.6.0"
+kiteconnect = "^3.9.4"
+requests = "^2.26.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
