order cancel and modify added to fyers broker

--- a/omspy/brokers/fyers.yaml
+++ b/omspy/brokers/fyers.yaml
@@ -19,3 +19,9 @@ order_place:
   quantity: qty
   order_type: type
   disclosed_quantity: disclosedQty
+order_modify:
+  order_id: id
+  price: limitPrice
+  trigger_price: stopLoss
+  quantity: qty
+  order_type: type
