order_place added to broker zerodha

--- a/omspy/brokers/zerodha.yaml
+++ b/omspy/brokers/zerodha.yaml
@@ -6,5 +6,5 @@ positions:
 trades:
   tradingsymbol: symbol
 order_place:
-  tradingsymbol: symbol
-  transaction_type: side
+  symbol: tradingsymbol
+  side: transaction_type
