--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,16 +12,18 @@ python = "^3.7"
 pendulum = "^2.1.2"
 pydantic = "^1.8.2"
 PyYAML = "^5.4.1"
+sqlite-utils = "^3.22.1"
 
 [tool.poetry.group.test.dependencies]
 coverage = "^6.0.2"
 selenium = "^3.141.0"
 pytest = "^5.2"
 pytest-watch = "^4.2.0"
+pre-commit = "^2.17.0"
 
 [tool.poetry.group.brokers.dependencies]
 pyotp = "^2.6.0"
-kiteconnect = "^3.9.4"
+kiteconnect = "^4.0.0"
 requests = "^2.25.0"
 fyers-apiv2 = "^2.0.5"
 
