--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ pyotp = "^2.6.0"
 kiteconnect = "^4.0.0"
 requests = "^2.25.0"
 fyers-apiv2 = "^2.0.5"
+requests-oauthlib = "^1.3.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
