order modify function added

--- a/omspy/brokers/kotak.yaml
+++ b/omspy/brokers/kotak.yaml
@@ -1,12 +1,11 @@
 order_place:
   side: transaction_type
 positions:
-  totalStock: quantity
+  netTrdQtyLot: quantity
 orders:
   transactionType: side
   filledQuantity: filled_quantity
-  orderQuantity: quantity 
+  orderQuantity: quantity
   orderId: order_id
   orderTimestamp: exchange_timestamp
   exchangeOrderId: exchange_order_id
-
