--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ readme = "README.md"
 repository = "https://github.com/uberdeveloper/omspy"
 
 [tool.poetry.dependencies]
-python = "^3.7"
+python = "^3.8"
 pendulum = "^2.1.2"
 pydantic = "^1.8.2"
 PyYAML = "^5.4.1"
@@ -27,6 +27,8 @@ kiteconnect = "^4.0.0"
 requests = "^2.25.0"
 fyers-apiv2 = "^2.0.5"
 requests-oauthlib = "^1.3.1"
+ks-api-client = {git = "https://github.com/osparamatrix/ks-orderapi-python.git"}
+pandas = "^1.4.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
