order_modify added

--- a/omspy/brokers/finvasia.yaml
+++ b/omspy/brokers/finvasia.yaml
@@ -2,3 +2,8 @@ order_place:
   validity: retention
   disclosed_quantity: discloseqty
   product: product_type
+order_modify:
+  quantity: newquantity
+  price: newprice
+  trigger_price: newtrigger_price
+  symbol: tradingsymbol
