modify_attribs added to finvasia broker

--- a/omspy/brokers/finvasia.yaml
+++ b/omspy/brokers/finvasia.yaml
@@ -7,6 +7,8 @@ order_modify:
   price: newprice
   trigger_price: newtrigger_price
   symbol: tradingsymbol
+  disclosed_quantity: discloseqty
+  validity: retention
 positions:
   tsym: symbol
   netqty: quantity
