--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ selenium = "^3.141.0"
 pytest = "^5.2"
 pytest-watch = "^4.2.0"
 pre-commit = "^2.17.0"
+httpx = "^0.23.3"
 
 [tool.poetry.group.brokers.dependencies]
 pyotp = "^2.6.0"
