orders property implemented for neo broker

--- a/omspy/brokers/neo.yaml
+++ b/omspy/brokers/neo.yaml
@@ -6,3 +6,8 @@ order_modify:
   symbol: trading_symbol
   side: transaction_type
   exchange: exchange_segment
+orders:
+  nOrdNo: order_id
+  sym: symbol
+  ordSt: status
+  prod: product
