--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "omspy"
-version = "0.16.2"
+version = "0.16.3"
 description = ""
 license = "MIT"
 authors = ["Ubermensch <uberdeveloper001@gmail.com>"]
@@ -9,7 +9,7 @@ repository = "https://github.com/uberdeveloper/omspy"
 
 [tool.poetry.dependencies]
 python = "^3.8"
-pendulum = "^2.1.2"
+pendulum = "<3.0.0"
 pydantic = "^1.8.2"
 PyYAML = "^6.0.0"
 sqlite-utils = "^3.22.1"
@@ -19,7 +19,7 @@ fastapi = "^0.92.0"
 
 [tool.poetry.group.test.dependencies]
 coverage = "^6.0.2"
-selenium = "^3.141.0"
+selenium = "<4.1.0"
 pytest = "^5.2"
 pytest-watch = "^4.2.0"
 pre-commit = "^2.17.0"
@@ -27,7 +27,7 @@ httpx = "^0.23.3"
 
 [tool.poetry.group.brokers.dependencies]
 pyotp = "^2.6.0"
-kiteconnect = "^4.0.0"
+kiteconnect = "^5.0.0"
 requests = "^2.25.0"
 fyers-apiv2 = "^2.0.5"
 requests-oauthlib = "^1.3.1"
