--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ repository = "https://github.com/uberdeveloper/omspy"
 
 [tool.poetry.dependencies]
 python = "^3.9"
-pendulum = "<3.0.0"
+pendulum = {extras = ["test"], version = "^3.0.0"}
 pydantic = "^1.8.2"
 PyYAML = "^6.0.0"
 sqlite-utils = "^3.22.1"
@@ -19,19 +19,20 @@ fastapi = "^0.92.0"
 
 [tool.poetry.group.test.dependencies]
 coverage = "^6.0.2"
-pytest = "^5.2"
 pytest-watch = "^4.2.0"
 pre-commit = "^2.17.0"
 httpx = "^0.23.3"
+pytest = "^8.3.3"
 
 [tool.poetry.group.brokers.dependencies]
 pyotp = "^2.6.0"
 kiteconnect = "^5.0.0"
 requests = "^2.25.0"
-requests-oauthlib = "^1.3.1"
 ks-api-client = {git = "https://github.com/osparamatrix/ks-orderapi-python.git"}
-pandas = "^1.4.2"
 nodriver = "^0.37"
+requests-oauthlib = "^2.0.0"
+pandas = "^2.2.3"
+numpy = "<2.0.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
